[FIX] Double subscript

--- a/paper/sections/backpropagation_perspective.tex
+++ b/paper/sections/backpropagation_perspective.tex
@@ -244,8 +244,7 @@ With the Laplacian's Jacobian from \Cref{eq:laplacian-gradient}, we can now writ
       \left(
       \jac_{\mW^{(i)}}\textcolor{red}{\bullet}
       \right)}_{
-      \eqqcolon \mG_{\Omega}^{(i)}_{\textcolor{blue}{\bullet}, \textcolor{red}{\bullet}}
-      }\,.
+      \eqqcolon \mG_{\Omega,\textcolor{blue}{\bullet}, \textcolor{red}{\bullet}}^{(i)}\,.
   \end{split}
 \end{align}
 The Gramian consists of nine different terms, see \Cref{fig:gramian-contribution-children} for a visualization which shows not only the diagonal blocks $\mG_{\Omega}^{(i)}$, but also the full Gramian$\mG_{\Omega}$ which decomposes in the same way.
